<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.LocationPerm">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/background_location_permission_n_true_locator_only_works_correctly_if_it_can_access_your_location"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/guide1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_200"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/btn_loc_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_arrow___back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/permissionn"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative2"
        app:layout_constraintTop_toBottomOf="@+id/guide2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">


        <Button
            android:id="@+id/btn_loc"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_below="@+id/text"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/poppins"
            android:text="@string/allow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:backgroundTint="@color/purple_200" />

        <Button
            android:id="@+id/allow"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_below="@+id/text"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/btn_shape"
            app:backgroundTint="#febf61"
            android:fontFamily="@font/poppins"
            android:text="Allow all the time"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>